--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -53,14 +53,13 @@
 
 			</div>			
 
-			<div class="default-index-title">
-				<div class="title text-truncate" title="{{indexConfigObj[selectedIndexConfig]?indexConfigObj[selectedIndexConfig].name:'Loading..'}}">{{indexConfigObj[selectedIndexConfig]?indexConfigObj[selectedIndexConfig].name:'Loading..'}} </div>		
-				<div class="kr-sg-dropdowns" #selectIndexConfigDrop='ngbDropdown' ngbDropdown [container]="'body'" [placement]="'bottom-left'">
+			<div class="default-index-title">				
+				<div class="kr-sg-dropdowns" #selectIndexConfigDrop='ngbDropdown' ngbDropdown [placement]="'bottom'">
 					<div class="dropdown dropdown-open">
-						<button class="dropdown-toggle dropdown-input before-none" ngbDropdownToggle>
-							<img src="assets/icons/sidemenu/overflow.svg">
+						<button class="dropdown-toggle dropdown-input" title="{{indexConfigObj[selectedIndexConfig]?indexConfigObj[selectedIndexConfig].name:'Loading..'}}" ngbDropdownToggle>
+							<span class="text-truncate">{{indexConfigObj[selectedIndexConfig]?indexConfigObj[selectedIndexConfig].name:'Loading..'}}</span>
 						</button>
-						<ul class="dropdown-menu content-menu queryPipelineConfig" ngbDropdownMenu>
+						<ul class="dropdown-menu content-menu queryPipelineDefault" ngbDropdownMenu>
 							<perfect-scrollbar>
 								<li class="list-name text-truncate" [ngClass]="{'nostars': !config.default}" (click)="selectIndexPipelineId(config,selectIndexConfigDrop)" *ngFor="let config of indexConfigs">
 									<img src="assets/icons/star.svg" *ngIf="config.default" class="star" [container]="'body'" ngbTooltip='Default' placement="top-center">
@@ -123,9 +122,9 @@
 
 				<div class="search-config-title">Search Configuration</div>
 
-				<div class="search-config-elipse-block default-index-title">
+				<div class="search-config-elipse-block">
 					<div class="title text-truncate" title="{{configObj[selectedConfig]?configObj[selectedConfig].name:'Loading..'}}">{{configObj[selectedConfig]?configObj[selectedConfig].name:'Loading..'}} </div>
-					<div class="kr-sg-dropdowns" #selectSearchConfigDrop='ngbDropdown' ngbDropdown [container]="'body'" [placement]="'bottom-left'">
+					<div class="kr-sg-dropdowns kr_sg_dropdowns" #selectSearchConfigDrop='ngbDropdown' ngbDropdown [container]="'body'" [placement]="'bottom-left'">
 						<div class="dropdown dropdown-open">
 							<button class="dropdown-toggle dropdown-input before-none" ngbDropdownToggle>
 								<img src="assets/icons/sidemenu/overflow.svg">
@@ -300,113 +299,84 @@
 
 		</div>
 
-		<!-- <div class="status-docker" (click)="(dockService.showStatusDocker = !dockService.showStatusDocker); openStatusDocker()">
-			<div class="circles">
-				<div class="inner-clrcle"></div>
-			</div>
-			<div mat-button class="mat-button" [routerLink]="['/usageLog']" skipLocationChange routerLinkActive="active" (click)="preview('index')" mat-button>
-				<span class="inlineIconBox">
-					<img src="assets/icons/sidemenu/new-icons/usagelog.svg" class="defaultIcon">
-					<img src="assets/icons/sidemenu/new-icons/usagelog.svg" class="activeIcon">
-				</span>
-				<span class="linkTitle">Usage Log</span>
-			</div>
-			<div mat-button class="mat-button" [routerLink]="['/invoices']" skipLocationChange routerLinkActive="active" (click)="preview('index')" mat-button>
-				<span class="inlineIconBox">
-					<img src="assets/icons/sidemenu/new-icons/invoice.svg" class="defaultIcon">
-					<img src="assets/icons/sidemenu/new-icons/invoice.svg" class="activeIcon">
-				</span>
-				<span class="linkTitle">Invoices</span>
-			</div>
-			
+	<!-- Sidebar -->
+
+	<kr-modal modalType="center" modalClass="modal_popups_ add-experment-popup smallModal"  #addFieldModalPop>   
+		<div class="modal-header">
+			<div class="title">{{newConfigObj.method==='default'?'New':'Clone'}} Search Configuration</div>
+			<div class="close_icon" (click)="closeModalPopup()"><img src="assets/icons/modal-close.svg"></div>
 		</div>
-
-	</perfect-scrollbar>
-
-</div>
-
-<!-- Sidebar -->
-
-<kr-modal modalType="center" modalClass="modal_popups_ add-experment-popup smallModal"  #addFieldModalPop>   
-    <div class="modal-header">
-        <div class="title">{{newConfigObj.method==='default'?'New':'Clone'}} Search Configuration</div>
-        <div class="close_icon" (click)="closeModalPopup()"><img src="assets/icons/modal-close.svg"></div>
-    </div>
-    <perfect-scrollbar class="perfect-scroll-modal-body">
-    <div class="modal-body textAlignLeft">
-		<div class="group-radiobutton">
-			<div class="kr-sg-radiobutton">
-				<input id="createQueryConfig" [(ngModel)]="newConfigObj.method" name="default" value='default' class="radio-custom" type="radio">
-				<label for="createQueryConfig" class="radio-custom-label">Create New</label>
+		<perfect-scrollbar class="perfect-scroll-modal-body">
+		<div class="modal-body textAlignLeft">
+			<div class="group-radiobutton">
+				<div class="kr-sg-radiobutton">
+					<input id="createQueryConfig" [(ngModel)]="newConfigObj.method" name="default" value='default' class="radio-custom" type="radio">
+					<label for="createQueryConfig" class="radio-custom-label">Create New</label>
+				</div>
+				<div class="kr-sg-radiobutton">
+					<input id="cloneQueryConfig" [(ngModel)]="newConfigObj.method" (change)='selectDefault()' name="clone" value='clone' class="radio-custom" type="radio">
+					<label for="cloneQueryConfig" class="radio-custom-label">Clone Configuration</label>
+				</div>
 			</div>
-			<div class="kr-sg-radiobutton">
-				<input id="cloneQueryConfig" [(ngModel)]="newConfigObj.method" (change)='selectDefault()' name="clone" value='clone' class="radio-custom" type="radio">
-				<label for="cloneQueryConfig" class="radio-custom-label">Clone Configuration</label>
-			</div>
+			<ng-container *ngIf="newConfigObj.method === 'clone'">
+				<div class="kr-sg-dropdowns kr_sg_dropdowns mb-2 pb-1 pt-4">
+					<div class="label-text">Search Configuration</div>
+					<div class="dropdown dropdown-open">
+						<button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{newConfigObj.config_name===''?'Select Search Configuration to be cloned':newConfigObj.config_name}}</button>                                            
+						<ul class="dropdown-menu content-menu">
+						<li *ngFor="let config of queryConfigs" (click)="selectConfig(config)"><a>{{config.name}}</a></li>                                              
+						</ul>
+					</div>                   
+				</div> 
+			</ng-container> 
+			<div class="kr-sg-input-text pt-3">
+				<div class="label-text">{{newConfigObj.method==='clone'?'Search Configuration Name':'Configuration Name'}}</div>
+				<input type="text" placeholder="{{newConfigObj.method==='clone'?'Name the New Search Configuration':'Enter Name'}}" [(ngModel)]="newConfigObj.name" class="input-text">
+			</div>	
 		</div>
-		<ng-container *ngIf="newConfigObj.method === 'clone'">
-			<div class="kr-sg-dropdowns mb-2 pb-1 pt-4">
-				<div class="label-text">Search Configuration</div>
-				<div class="dropdown dropdown-open">
-					<button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{newConfigObj.config_name===''?'Select Search Configuration to be cloned':newConfigObj.config_name}}</button>                                            
-					<ul class="dropdown-menu content-menu">
-					  <li *ngFor="let config of queryConfigs" (click)="selectConfig(config)"><a>{{config.name}}</a></li>                                              
-					</ul>
-				  </div>                   
-			</div> 
-		</ng-container> 
-		<div class="kr-sg-input-text pt-3">
-			<div class="label-text">{{newConfigObj.method==='clone'?'Search Configuration Name':'Configuration Name'}}</div>
-			<input type="text" placeholder="{{newConfigObj.method==='clone'?'Name the New Search Configuration':'Enter Name'}}" [(ngModel)]="newConfigObj.name" class="input-text">
-		</div>	
-    </div>
-    </perfect-scrollbar> 
-    <div class="modal-footer text-left">
-        <button type="button" [disabled]="!newConfigObj.name" class="kr-sg-button-primary btn_lg float-right" (click)="createConfig()">{{newConfigObj.method==='clone'?'Clone':'Add'}}</button>                   
-        <button type="button" class="kr-sg-button-secondary btn_lg float-right" (click)="closeModalPopup()">Cancel</button>
-    </div>    
-</kr-modal>
-<!--index config popup-->
-<kr-modal modalType="center" modalClass="modal_popups_ add-experment-popup smallModal"  #addIndexFieldModalPop>   
-    <div class="modal-header">
-        <div class="title">{{newIndexConfigObj.method==='default'?'New':'Clone'}} Index Configuration</div>
-        <div class="close_icon" (click)="closeIndexModalPopup()"><img src="assets/icons/modal-close.svg"></div>
-    </div>
-    <perfect-scrollbar class="perfect-scroll-modal-body">
-    <div class="modal-body textAlignLeft">
-		<div class="group-radiobutton">
-			<div class="kr-sg-radiobutton">
-				<input id="createIndexConfig" [(ngModel)]="newIndexConfigObj.method" name="creationType" value='default' class="radio-custom" type="radio">
-				<label for="createIndexConfig" class="radio-custom-label">Create New</label>
-			</div>
-			<div class="kr-sg-radiobutton">
-				<input id="cloneIndexConfig" [(ngModel)]="newIndexConfigObj.method" (change)='selectDefault()' name="creationType" value='clone' class="radio-custom" type="radio">
-				<label for="cloneIndexConfig" class="radio-custom-label">Clone Configuration</label>
-			</div>
+		</perfect-scrollbar> 
+		<div class="modal-footer text-left">
+			<button type="button" [disabled]="!newConfigObj.name" class="kr-sg-button-primary btn_lg float-right" (click)="createConfig()">{{newConfigObj.method==='clone'?'Clone':'Add'}}</button>                   
+			<button type="button" class="kr-sg-button-secondary btn_lg float-right" (click)="closeModalPopup()">Cancel</button>
+		</div>    
+	</kr-modal>
+	<!--index config popup-->
+	<kr-modal modalType="center" modalClass="modal_popups_ add-experment-popup smallModal"  #addIndexFieldModalPop>   
+		<div class="modal-header">
+			<div class="title">{{newIndexConfigObj.method==='default'?'New':'Clone'}} Index Configuration</div>
+			<div class="close_icon" (click)="closeIndexModalPopup()"><img src="assets/icons/modal-close.svg"></div>
 		</div>
-		<ng-container *ngIf="newIndexConfigObj.method === 'clone'">
-			<div class="kr-sg-dropdowns mb-2 pb-1 pt-4">
-				<div class="label-text">Index Configuration</div>                            
-				<div class="dropdown dropdown-open">
-					<button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{newIndexConfigObj.index_config_name===''?'Select Index Configuration to be cloned':newIndexConfigObj.index_config_name}}</button>                                            
-					<ul class="dropdown-menu content-menu">
-					  <li *ngFor="let config of indexConfigs" (click)="selectIndexConfig(config)"><a>{{config.name}}</a></li>                                              
-					</ul>
-				  </div>                               
+		<perfect-scrollbar class="perfect-scroll-modal-body">
+		<div class="modal-body textAlignLeft">
+			<div class="group-radiobutton">
+				<div class="kr-sg-radiobutton">
+					<input id="createIndexConfig" [(ngModel)]="newIndexConfigObj.method" name="creationType" value='default' class="radio-custom" type="radio">
+					<label for="createIndexConfig" class="radio-custom-label">Create New</label>
+				</div>
+				<div class="kr-sg-radiobutton">
+					<input id="cloneIndexConfig" [(ngModel)]="newIndexConfigObj.method" (change)='selectDefault()' name="creationType" value='clone' class="radio-custom" type="radio">
+					<label for="cloneIndexConfig" class="radio-custom-label">Clone Configuration</label>
+				</div>
 			</div>
-		</ng-container> 
-		<div class="kr-sg-input-text pt-4">
-			<div class="label-text">{{newIndexConfigObj.method==='clone'?'Index Configuration Name':'Name of Index Configuration'}}</div>
-			<input type="text" placeholder="{{newIndexConfigObj.method==='clone'?'Name the New Index Configuration':'Enter Name'}}" [(ngModel)]="newIndexConfigObj.name" class="input-text">
-		</div>	
-    </div>
-    </perfect-scrollbar> 
-    <div class="modal-footer text-left">
-        <button type="button" [disabled]="!newIndexConfigObj.name" class="kr-sg-button-primary btn_lg float-right" (click)="createIndexConfig()">{{newIndexConfigObj.method==='clone'?'Clone':'Add'}}</button>                   
-        <button type="button" class="kr-sg-button-secondary btn_lg float-right" (click)="closeIndexModalPopup()">Cancel</button>
-    </div>    
-</kr-modal>
-
-<!-- <div class="statusDockerContent" *ngIf="dockService.showStatusDocker">
-	<app-status-docker [statusDockerLoading]="statusDockerLoading"></app-status-docker>
-</div> -->
+			<ng-container *ngIf="newIndexConfigObj.method === 'clone'">
+				<div class="kr-sg-dropdowns kr_sg_dropdowns mb-2 pb-1 pt-4">
+					<div class="label-text">Index Configuration</div>                            
+					<div class="dropdown dropdown-open">
+						<button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{newIndexConfigObj.index_config_name===''?'Select Index Configuration to be cloned':newIndexConfigObj.index_config_name}}</button>                                            
+						<ul class="dropdown-menu content-menu">
+						<li *ngFor="let config of indexConfigs" (click)="selectIndexConfig(config)"><a>{{config.name}}</a></li>                                              
+						</ul>
+					</div>                               
+				</div>
+			</ng-container> 
+			<div class="kr-sg-input-text pt-4">
+				<div class="label-text">{{newIndexConfigObj.method==='clone'?'Index Configuration Name':'Name of Index Configuration'}}</div>
+				<input type="text" placeholder="{{newIndexConfigObj.method==='clone'?'Name the New Index Configuration':'Enter Name'}}" [(ngModel)]="newIndexConfigObj.name" class="input-text">
+			</div>	
+		</div>
+		</perfect-scrollbar> 
+		<div class="modal-footer text-left">
+			<button type="button" [disabled]="!newIndexConfigObj.name" class="kr-sg-button-primary btn_lg float-right" (click)="createIndexConfig()">{{newIndexConfigObj.method==='clone'?'Clone':'Add'}}</button>                   
+			<button type="button" class="kr-sg-button-secondary btn_lg float-right" (click)="closeIndexModalPopup()">Cancel</button>
+		</div>    
+	</kr-modal>
