bugs fixed in search experience

--- a/findly-builder/src/app/components/apps-home/apps-home.html
+++ b/findly-builder/src/app/components/apps-home/apps-home.html
@@ -168,8 +168,8 @@
   </div>
   <div class="modal-body">
     <div class="kr-sg-input-text mb-3">
-      <div class="label-text">Name Your App</div>
-      <input maxlength="128" type="text" autocomplete="off" placeholder="Test App" class="input-text" [(ngModel)]="newApp.name" name="appName">
+      <div class="label-text">App Name</div>
+      <input maxlength="128" type="text" autocomplete="off" placeholder="Enter App Name" class="input-text" [(ngModel)]="newApp.name" name="appName">
     </div>
     <!-- <div class="kr-sg-input-text-area mb-2">
       <div class="label-text">Description</div>
