1. FLY-2136 => Moving Sources in to TopNavigation. 2. Moving Experiments into Analytics. 3. Moving SearchInterface, Result Templates in to Indices (Only UI). 4. Required Fixes for Navigation Changes.

--- a/findly-builder/src/app/app.component.html
+++ b/findly-builder/src/app/app.component.html
@@ -1,8 +1,8 @@
 <meta name="viewport" content="width=device-width, user-scalable=no">
 <div class="krFindlyAppComponent">
     <div *ngIf="!loading" (click)="globalHandler($event)">
-        <app-header (showMenu)="showMenu($event)" (settingMenu)="settingMenu($event)"></app-header>
-        <app-mainmenu [show]="showMainMenu" [settingMainMenu]="settingMainMenu" class="toShowAppHeader"></app-mainmenu>
+        <app-header (showMenu)="showMenu($event)" (settingMenu)="settingMenu($event)" (showSourceMenu)="showSourceMenu($event)"></app-header>
+        <app-mainmenu [show]="showMainMenu" [settingMainMenu]="settingMainMenu" [sourceMenu]="sourceMenu" class="toShowAppHeader"></app-mainmenu>
         <app-body (initSearchSDK)="initSearchSDK()" (closeResultBody)="closeResultBody($event)" [query]="queryText"
             [bridgeData]="bridgeDataInsights" [showInsightFull]="showInsightFull" [addNewResult]="addNewResult"
             class="container-fluid appContent" [ngClass]="{'pl-0': !showMainMenu}" [structure]="structure"></app-body>
