--- a/findly-builder/src/app/components/app-header/app-header.component.html
+++ b/findly-builder/src/app/components/app-header/app-header.component.html
@@ -9,14 +9,25 @@
                     <div container="body" ngbTooltip="{{appName}}" class="name">{{appName}}</div>
                 </div> -->
                 <div class="headerTabsContainer">
-                    <div class="headerMenuTab" [ngClass]="{'active' : mainMenu == '/summary'}" skipLocationChange routerLinkActive="active" (click)="analyticsClick('/summary')">Overview</div>
-                    <div class="headerMenuTab" [ngClass]="{'active' : mainMenu == '/source'}" skipLocationChange routerLinkActive="active" (click)="analyticsClick('/source')">SOURCES</div>
-                    <div class="headerMenuTab" id="sourceTab" [ngClass]="{'active' : mainMenu == '/source'}" skipLocationChange routerLinkActive="active" (click)="analyticsClick('/source')">
-                        <span>Indices</span>
+                    <div class="headerMenuTab" [ngClass]="{'active' : mainMenu == '/summary'}" skipLocationChange routerLinkActive="active" (click)="analyticsClick('/summary')">
+                        <span>Overview</span>
+                        <span routerLink="/summary" class="d-none"></span>
+                    </div>
+                    <div class="headerMenuTab" [ngClass]="{'active' : mainMenu == '/content'}" skipLocationChange routerLinkActive="active" (click)="analyticsClick('/content')">
+                        <span>SOURCES</span>
+                        <span routerLink="/source" class="d-none"></span>
                         <span routerLink="/content" class="d-none"></span>
                         <span routerLink="/faqs" class="d-none"></span>
-                        <span routerLink="/indices" class="d-none"></span>
                         <span routerLink="/botActions" class="d-none"></span>
+                        <span routerLink="/structuredData" class="d-none"></span>
+                    </div>
+                    <div class="headerMenuTab" id="sourceTab" [ngClass]="{'active' : mainMenu == '/index'}" skipLocationChange routerLinkActive="active" (click)="analyticsClick('/index')">
+                        <span>Indices</span>
+                        <span routerLink="/searchInterface" class="d-none"></span>
+                        <span routerLink="/search-experience" class="d-none"></span>
+                        <span routerLink="/indices" class="d-none"></span>
+                        <span routerLink="/synonyms" class="d-none"></span>
+                        <span routerLink="/stopWords" class="d-none"></span>
                         <span routerLink="/ml-threshold" class="d-none"></span>
                         <span routerLink="/traits" class="d-none"></span>
                         <span routerLink="/rules" class="d-none"></span>
@@ -25,6 +36,7 @@
                         <span routerLink="/attributes" class="d-none"></span>
                         <span routerLink="/weights" class="d-none"></span>
                         <span routerLink="/resultranking" class="d-none"></span>
+                        <span routerLink="/facets" class="d-none"></span>
                         <span routerLink="/FieldManagementComponent" class="d-none"></span>
                     </div>
                     <!-- <div class="headerMenuTab" id='experimentsTab' [ngClass]="{'active' : mainMenu == '/experiments'}" (click)="analyticsClick('/experiments')">Experiments</div> -->
@@ -43,10 +55,17 @@
                     </div>
                     <!-- <div class="headerMenuTab" [routerLink]="['/dashboard']" skipLocationChange routerLinkActive="active" (click)="analyticsClick('metrics')">Analytics</div> -->
                     <!-- <div class="headerMenuTab" id='experimentsTab' [ngClass]="{'active' : mainMenu == '/experiments'}" (click)="analyticsClick('/experiments')">Experiments</div> -->
-                    <div class="headerMenuTab" id='channelsTab' [ngClass]="{'active' : mainMenu == '/settings'}" skipLocationChange routerLinkActive="active" (click)="analyticsClick('/search-experience')">
+                    <div class="headerMenuTab" id='channelsTab' [ngClass]="{'active' : mainMenu == '/actions'}" skipLocationChange routerLinkActive="active" (click)="analyticsClick('/actions')">
                         <span>MANAGE</span>
-                        <span routerLink="/search-experience" class="d-none"></span>
-                        </div>
+                        <span routerLink="/actions" class="d-none"></span>
+                        <span routerLink="/smallTalk" class="d-none"></span>
+                        <span routerLink="/settings" class="d-none"></span>
+                        <span routerLink="/credentials-list" class="d-none"></span>
+                        <span routerLink="/team-management" class="d-none"></span>
+                        <span routerLink="/pricing" class="d-none"></span>
+                        <span routerLink="/usageLog" class="d-none"></span>
+                        <span routerLink="/invoices" class="d-none"></span>
+                    </div>
                 </div>
             </div>
             <ul class="navbar-nav nav-flex-icons align-items-center right-menu-content flex-row justify-content-end">
