--- a/findly-builder/src/app/components/search-experience/search-experience.component.scss
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.scss
@@ -615,13 +615,67 @@
                             flex-shrink: 0;
                             .emoji-img{
                                 margin: 0 22px;
+                                .kr-sg-dropdowns {
+                                    .dropdown-open {
+                                        .dropdown-input{
+                                            border: 0;
+                                            padding: 0;
+                                            width: auto;
+                                            height: auto;
+                                            line-height: normal;
+                                            &::before{
+                                                display: none;
+                                            }
+                                        }
+                                    }
+                                    .content-menu{
+                                        margin: 0;
+                                        padding: 0;
+                                        border: 0;
+                                        padding-left: 25px;
+                                        .emojis-images-block{
+                                            background: #FFFFFF;
+                                            box-shadow: 0px 0px 4px rgb(0 0 0 / 25%);
+                                            border-radius: 6px;
+                                            width: 258px;
+                                            height: 142px;
+                                            padding: 12px 16px;
+                                            position: relative;
+                                            margin-top: -20px;
+                                            &::before{
+                                                content: "";
+                                                position: absolute;
+                                                width: 24px;
+                                                height: 24px;
+                                                background: #FFFFFF;
+                                                box-shadow: -3px 3px 4px rgb(0 0 0 / 10%);
+                                                transform: rotate(45deg);
+                                                left: -12px;
+                                                top: 18px;
+                                            }
+                                            .close-btn{
+                                                text-align: right;
+                                                line-height: normal;
+                                                img{
+                                                    cursor: pointer;    
+                                                    vertical-align: top;
+                                                }
+                                            }
+                                            li{
+                                                &.emoji-type{
+                                                    position: relative;
+                                                    margin: 5px;
+                                                    line-height: normal;
+                                                    display: inline-block;
+                                                    width: 22px;
+                                                    height: 22px;
+                                                }
+                                            }
+                                        }
+                                    }
+                                }
                             }
-                            // .color_picker{
-                            //     background: #5F6368;
-                            //     border-radius: 2px;
-                            //     width: 22px;
-                            //     height: 22px;
-                            // }
+                            
                             .fill-colors-block{                               
                                 .fill-color{                                    
                                     .label-color{
@@ -741,6 +795,116 @@
                                         box-sizing: border-box;
                                         border-radius: 2px;
                                     }
+                                }
+                            }
+                        }
+                    }                    
+                    .preview-search-ex{
+                        border-bottom: 1px solid #EFF0F1;  
+                        padding: 0 0 35px 0;
+                        .greeting-block{
+                            background: #F8F9FA;
+                            border: 1px solid #E0E1E9;
+                            filter: drop-shadow(0px 0px 11px rgba(0, 0, 0, 0.11));
+                            box-sizing: border-box;
+                            border-radius: 8px;
+                            padding: 11px;
+                            display: inline-flex;
+                            align-items: center;
+                            margin: 12px 0;
+                            .greeting-title{
+                                color: #3C4043;
+                                font-weight: normal;
+                                font-size: 14px;
+                                line-height: 20px;
+                                padding-left: 10px;
+                            }
+                        }
+                        .search-widget-if-bottom-up{
+                            .main-title{
+                                color: #3C4043;
+                                font-weight: 600;
+                                font-size: 16px;
+                                line-height: 19px;
+                                margin-bottom: 26px;
+                            }
+                            .kr-sg-input-search{                                
+                                box-shadow: -16px -16px 64px rgba(255, 255, 255, 0.8), -1px 2px 30px rgba(18, 61, 101, 0.4), inset -8px -6px 80px rgba(255, 255, 255, 0.18);
+                                border-radius: 6px;
+                                width: 485px;
+                                margin: 0;
+                                .input-search{
+                                    height: 40px;
+                                    line-height: 40px;
+                                    &:focus{
+                                        border: 0;
+                                        outline: 0 !important;
+                                    }
+                                }
+                                .search-icon{
+                                    width: 16px;
+                                    height: 16px;
+                                    left: 9px;
+                                    top: 12px;
+                                    border: 1px solid transparent;
+                                }
+                                .inside-input-btn{
+                                    position: absolute;
+                                    top: 3px;
+                                    right: 4px;
+                                    height: 34px;
+                                    padding: 0 10px;
+                                    font-weight: 500;
+                                    font-size: 12px;
+                                    line-height: 18px;
+                                }                                
+                                .placeholder-text{                
+                                    position: absolute;
+                                    left: 36px;
+                                    top: 9px;
+                                    font-weight: normal;
+                                    font-size: 14px;
+                                    line-height: 20px;
+                                }
+                            }
+                        }
+
+
+                        .search-widget{
+                            margin-top: 18px;
+                            .main-title{
+                                color: #3C4043;
+                                font-weight: 600;
+                                font-size: 16px;
+                                line-height: 19px;
+                                margin-bottom: 26px;
+                            }
+                            .kr-sg-input-search{
+                                width: 700px;
+                                margin-right: 15px;
+                                .input-search{
+                                    &:focus{
+                                        border: 0;
+                                        outline: 0 !important;
+                                    }
+                                }
+                                .inside-input-btn{
+                                    position: absolute;
+                                    top: 3px;
+                                    right: 4px;
+                                    height: 28px;                                    
+                                    padding: 0 10px;
+                                    font-weight: 500;
+                                    font-size: 12px;
+                                    line-height: 18px;
+                                }
+                                .placeholder-text{                
+                                    position: absolute;
+                                    left: 36px;
+                                    top: 6px;
+                                    font-weight: normal;
+                                    font-size: 14px;
+                                    line-height: 20px;
                                 }
                             }
                         }
